# browser-agent

./: .gitignore  CLAUDE.md  README.md  ai_browser_agent_research.md  architecture-v2.md  plan.md  pyproject.toml
.github/workflows/: ci.yml
dev-docs/always-screenshot/: always-screenshot-context.md  always-screenshot-plan.md  always-screenshot-tasks.md
dev-docs/browser-controller/: browser-controller-context.md  browser-controller-plan.md  browser-controller-tasks.md
dev-docs/fix-pr11-review-issues/: fix-pr11-review-issues-context.md  fix-pr11-review-issues-plan.md  tasks.md
dev-docs/page-parser/: page-parser-context.md  page-parser-plan.md  page-parser-tasks.md
dev/active/agent-optimization/: agent-optimization-context.md  agent-optimization-plan.md  agent-optimization-tasks.md
dev/active/agent-perf-improvements/: agent-perf-improvements-context.md  (+2 more)
src/: cli.py  main.py
src/agent/: __init__.py  action_dispatcher.py  context_manager.py  core.py  file_tools.py  graph.py  inspection.py  loop_detector.py  message_builder.py  message_manager.py  page_analyzer.py  plan_tracker.py  planner.py  prompts.py  response_parser.py  schema.py  state.py  step_logger.py  tool_registry.py  tools_schema.py  trace.py  transition_analyzer.py
src/browser/: controller.py  manager.py  tools.py
src/config/: settings.py
src/parser/: page_parser.py
src/security/: __init__.py  classifier.py  gate.py  schema.py  security_layer.py
src/utils/: error_recovery.py  logger.py
tests/: test_agent_trace.py  test_graph.py  test_logger.py  test_settings.py
(+3 files in other folders)
